--- a/src/components/Projetos/Projetos.module.css
+++ b/src/components/Projetos/Projetos.module.css
@@ -33,3 +33,11 @@
     font-size: 14px;
     color: #555;
 }
+
+.tituloPrincipal {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #b86bff; /* Lilás elegante */
+}
