--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -82,7 +82,7 @@
 .image {
   width: 300px;
   height: 300px;
-  border-radius: 20px; /* Quadrada com bordas arredondadas */
+  border-radius: 20px;
   object-fit: cover;
   box-shadow: 0px 5px 20px rgba(139, 92, 246, 0.3);
 }
@@ -120,5 +120,4 @@
   border-radius: 8px;
   cursor: pointer;
 }
-
 
