--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -2,6 +2,9 @@
   background: linear-gradient(90deg, #f5f3ff, #ebe4ff);
   padding: 15px 0;
   border-bottom: 1px solid #e0d4ff;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .nav {
@@ -18,5 +21,5 @@
 }
 
 .nav a:hover {
-  color: black;
+  color: #8b5cf6;
 }
