--- a/src/components/Sobre/Sobre.module.css
+++ b/src/components/Sobre/Sobre.module.css
@@ -1,18 +1,18 @@
 .sobre {
-  padding: 3rem 0;
   text-align: center;
-}
-
-.titulo {
-  font-size: 2rem;
+  padding: 40px 0;
   color: #4b0082;
-  margin-bottom: 1.5rem;
 }
 
-.texto {
-  max-width: 700px;
-  margin: 0 auto 1rem;
-  font-size: 1rem;
+.sobre h2 {
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+.sobre p {
+  max-width: 600px;
+  margin: 0 auto;
+  font-size: 1.1rem;
+  color: #2d2d2d;
   line-height: 1.6;
-  color: #444;
 }
